Update to 0.6.7 - added responsive clear classes

--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -2474,6 +2474,11 @@ if $colors.violet
   .float-right-on-sml
     float right
 
+  .clear-on-s,
+  .clear-on-sm,
+  .clear-on-sml
+    clear both
+
   .center-on-s,
   .center-on-sm,
   .center-on-sml
@@ -2542,6 +2547,14 @@ if $colors.violet
   .float-right-on-mlx,
   .float-right-on-mlxp
     float right
+
+  .clear-on-m,
+  .clear-on-sm,
+  .clear-on-ml,
+  .clear-on-sml,
+  .clear-on-mlx,
+  .clear-on-mlxp
+    clear both
 
   .center-on-m,
   .center-on-sm,
@@ -2638,6 +2651,15 @@ if $colors.violet
   .float-right-on-lxp
     float right
 
+  .clear-on-l,
+  .clear-on-ml,
+  .clear-on-lx,
+  .clear-on-sml,
+  .clear-on-mlx,
+  .clear-on-mlxp,
+  .clear-on-lxp
+    clear both
+
   .center-on-l,
   .center-on-ml,
   .center-on-lx,
@@ -2732,6 +2754,14 @@ if $colors.violet
   .float-right-on-lxp
     float right
 
+  .clear-on-x,
+  .clear-on-lx,
+  .clear-on-xp,
+  .clear-on-mlx,
+  .clear-on-mlxp,
+  .clear-on-lxp
+    clear both
+
   .center-on-x,
   .center-on-lx,
   .center-on-xp,
@@ -2808,6 +2838,12 @@ if $colors.violet
   .float-right-on-lxp,
   .float-right-on-mlxp
     float right
+
+  .clear-on-p,
+  .clear-on-xp,
+  .clear-on-lxp,
+  .clear-on-mlxp
+    clear both
 
   .center-on-p,
   .center-on-xp,
