Update to 0.6.8 - replaced responsive clear classes with float-none

--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -681,6 +681,9 @@ if $colors.violet
 .float-right
   float right
 
+.float-none
+  float none
+
 .clear
   clear both
 
@@ -2474,10 +2477,10 @@ if $colors.violet
   .float-right-on-sml
     float right
 
-  .clear-on-s,
-  .clear-on-sm,
-  .clear-on-sml
-    clear both
+  .float-none-on-s,
+  .float-none-on-sm,
+  .float-none-on-sml
+    float none
 
   .center-on-s,
   .center-on-sm,
@@ -2548,13 +2551,13 @@ if $colors.violet
   .float-right-on-mlxp
     float right
 
-  .clear-on-m,
-  .clear-on-sm,
-  .clear-on-ml,
-  .clear-on-sml,
-  .clear-on-mlx,
-  .clear-on-mlxp
-    clear both
+  .float-none-on-m,
+  .float-none-on-sm,
+  .float-none-on-ml,
+  .float-none-on-sml,
+  .float-none-on-mlx,
+  .float-none-on-mlxp
+    float none
 
   .center-on-m,
   .center-on-sm,
@@ -2651,14 +2654,14 @@ if $colors.violet
   .float-right-on-lxp
     float right
 
-  .clear-on-l,
-  .clear-on-ml,
-  .clear-on-lx,
-  .clear-on-sml,
-  .clear-on-mlx,
-  .clear-on-mlxp,
-  .clear-on-lxp
-    clear both
+  .float-none-on-l,
+  .float-none-on-ml,
+  .float-none-on-lx,
+  .float-none-on-sml,
+  .float-none-on-mlx,
+  .float-none-on-mlxp,
+  .float-none-on-lxp
+    float none
 
   .center-on-l,
   .center-on-ml,
@@ -2754,13 +2757,13 @@ if $colors.violet
   .float-right-on-lxp
     float right
 
-  .clear-on-x,
-  .clear-on-lx,
-  .clear-on-xp,
-  .clear-on-mlx,
-  .clear-on-mlxp,
-  .clear-on-lxp
-    clear both
+  .float-none-on-x,
+  .float-none-on-lx,
+  .float-none-on-xp,
+  .float-none-on-mlx,
+  .float-none-on-mlxp,
+  .float-none-on-lxp
+    float none
 
   .center-on-x,
   .center-on-lx,
@@ -2839,11 +2842,11 @@ if $colors.violet
   .float-right-on-mlxp
     float right
 
-  .clear-on-p,
-  .clear-on-xp,
-  .clear-on-lxp,
-  .clear-on-mlxp
-    clear both
+  .float-none-on-p,
+  .float-none-on-xp,
+  .float-none-on-lxp,
+  .float-none-on-mlxp
+    float none
 
   .center-on-p,
   .center-on-xp,
