--- a/src/global.styl
+++ b/src/global.styl
@@ -334,10 +334,9 @@ $table-zebra-bg = $light
 ----------------------------------------------------------------------------------------------------------------------*/
 $input-bg = $white
 $input-border = 3px solid $light
-$input-corner-radius = 6px
+$input-corner-radius = $rounded-m
 $input-font-size = $default-font-size
 $input-line-height = 1
-$input-padding = 12px 10px
 $input-transition = all 0.2s
 $indicator-border = 3px solid $subtle
 $input-disabled-color = $subtle
