--- a/src/global.styl
+++ b/src/global.styl
@@ -338,6 +338,7 @@ $input-corner-radius = $rounded-m
 $input-font-size = $default-font-size
 $input-line-height = 1
 $input-transition = all 0.2s
+$indicator-gap = 10px
 $indicator-border = 3px solid $subtle
 $input-disabled-color = $subtle
 $input-disabled-bg = $light
