Update to 0.7.4 - size fix for hidden input elements

--- a/src/base.styl
+++ b/src/base.styl
@@ -515,6 +515,8 @@ select:disabled:hover
 .radio input[type=radio]
   position fixed
   opacity 0
+  width 10px
+  height 10px
   z-index -9
 
 .checkbox-indicator,
