Update to 0.7.5 - fixed issue with border styling

--- a/src/base.styl
+++ b/src/base.styl
@@ -207,8 +207,10 @@ hr
   overflow hidden
   box-sizing content-box
   &.dotted
+    border-style none
     border-bottom-style dashed
   &.dashed
+    border-style none
     border-bottom-style dashed
   &.s
     border-width $hr-s
