Update to 0.7.5 - updated vuepress - fixed missing header margins in vuepress update

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -184,3 +184,12 @@ table td
 
 blockquote
   border-left none
+
+.theme-default-content:not(.custom) > h2
+  margin-bottom 30px
+
+.theme-default-content:not(.custom) > h3
+  margin-bottom 10px
+
+.theme-default-content:not(.custom) > h4
+  margin-bottom 20px
